# signal-service

./: .gitignore  README.md  pyproject.toml
.github/workflows/: pytest.yml
scripts/: RUNBOOK.md  add_low_vol_momentum_strategy.sql  deploy-signal-service.sh  mock_dataservice.py  mock_executionservice.py  rmr_xrp_tuning_set_b_candidate.yaml  rmr_xrp_tuning_set_c_candidate.yaml  rmr_xrp_tuning_set_e_candidate.yaml  rmr_xrp_tuning_set_f_candidate.yaml  rmr_xrp_tuning_set_g_candidate.yaml  rmr_xrp_tuning_set_h_candidate.yaml  rmr_xrp_tuning_set_i_candidate.yaml  seed_new_strategies.sql  signal-service.env.skeleton  signal-service.service  signal_service_e2e.py  tuning_set_b_rmr_xrp_5m.md  tuning_set_b_rmr_xrp_5m.sql  tuning_set_c_rmr_xrp_5m.md  tuning_set_c_rmr_xrp_5m.sql  tuning_set_e_rmr_xrp_5m.md  tuning_set_e_rmr_xrp_5m.sql  tuning_set_f_rmr_xrp_5m.md  tuning_set_f_rmr_xrp_5m.sql  tuning_set_g_rmr_xrp_5m.md  tuning_set_g_rmr_xrp_5m.sql  tuning_set_h_rmr_xrp_5m.md  tuning_set_h_rmr_xrp_5m.sql  tuning_set_i_rmr_xrp_5m.md  tuning_set_i_rmr_xrp_5m.sql
src/signal_service/: main.py  (+1 more)
src/signal_service.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
tests/: __init__.py  test_grpc_server.py  test_low_vol_momentum.py  test_mtf_confluence_position.py  test_new_strategies_loading.py  test_range_mean_reversion.py  test_strategy.py  test_strategy_engine.py  test_strategy_fingerprint.py  test_tuning_set_b_sql.py  test_tuning_set_c_sql.py  test_tuning_set_e_sql.py  test_tuning_set_f_sql.py  test_tuning_set_g_sql.py  test_tuning_set_h_sql.py  test_tuning_set_i_sql.py
(+18 files in other folders)
