[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "signal-service"
version = "0.1.0"
description = "Real-time trading signal generation for varon.fi"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "grpcio>=1.78.0",
    "grpcio-tools>=1.78.0",
    "protobuf>=4.25.0",
    "asyncpg>=0.29.0",
    "pandas>=2.1.0",
    "numpy>=1.26.0",
    "ta-lib>=0.4.28",
    "python-dotenv>=1.0.0",
    "structlog>=23.0.0",
    "varon-fi @ git+https://github.com/varon-fi/python.git@v1.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.0",
    "pytest-asyncio>=0.21.0",
    "pytest-cov>=4.1.0",
    "black>=23.0.0",
    "ruff>=0.1.0",
    "mypy>=1.7.0",
]

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"

[tool.black]
line-length = 100
target-version = ['py312']

[tool.ruff]
line-length = 100
select = ["E", "F", "I", "W"]
